# BEDMatrix

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac  cran-comments.md
R/: BEDMatrix.R  RcppExports.R  package.R
inst/: THANKS
inst/extdata/: example.bed  example.bim  example.fam  example.raw  mice.bim  mice.fam  mice.pheno
inst/include/: BEDMatrix.h  BEDMatrix_defines.h  BEDMatrix_interface.h  _BEDMatrix_stubs.c
inst/tinytest/: test-BEDMatrix.R  test-crochet.R  test-length.R
man/: BEDMatrix-class.Rd  BEDMatrix-package.Rd  BEDMatrix.Rd  initialize-BEDMatrix-method.Rd  show-BEDMatrix-method.Rd  subsetBED.Rd
man/examples/: BEDMatrix.R  initialize.R
revdep/: README.md  failures.md  problems.md  summary.md  timing.md
src/: BEDMatrix.c  BEDMatrix.cpp  BEDMatrix.h  Makevars.in  Makevars.win  RcppExports.cpp  bed.c  bed.h  init.c  mapping.c  mapping.h  subsetBED.cpp
tests/: tinytest.R
tests/testthat/: helper.R  test-BEDMatrix.R  test-[.R  test-bedmatrix.R  test-crochet.R  test-extract.R  test-length.R
tools/: README.md
tools/m4/: ax_boost_base.m4  ax_boost_iostreams.m4
